<resources>
    <string name="app_name">E-fishery application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="e_fishery_business">E-fishery business</string>
    <string name="fresh_fishes">Fresh fishes</string>
    <string name="oil">Oil</string>
    <string name="engine_spare_parts">Engine/Spare parts</string>
    <string name="fish_farming_seeds">Fish farming seeds</string>
    <string name="ice_factory">Ice factory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_tons">in kg</string>
    <string name="in_rs">in rs</string>

    <string name="todo">TODO</string>
    <string name="fishery_society">Fishery Society</string>
    <string name="customer">Customer</string>
    <string name="password">Password</string>
    <string name="update_panel">Update panel</string>

    <string name="update">Update</string>
    <string name="per_ton">per kg</string>
    <string name="rs">rs</string>
    <string name="availability">Availability: </string>
    <string name="ton"> kg</string>
    <string name="price">Price: </string>
    <string name="rs1"> Rs</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="contact">Contact</string>
    <string name="details">Details</string>
    <string name="address">Address</string>
    <string name="office_no">Office no.</string>
    <string name="office_name">Office name</string>
    <string name="society_office_name">Society office name</string>
    <string name="street_name">Street name</string>
    <string name="city_village_name">City / Village name</string>
    <string name="tal">Tal :</string>
    <string name="taluka_name">Taluka name</string>
    <string name="district">District :</string>
    <string name="district_name">District name</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile :</string>
    <string name="mobile1">Mobile</string>
    <string name="landline">Landline :</string>
    <string name="landline1">Landline</string>
    <string name="office_no1">Office no. :</string>
    <string name="taluka">Taluka</string>
    <string name="address_update">Address Update</string>
    <string name="phone_update">Phone update</string>
    <string name="customer_full_name">Customer Full name</string>
    <string name="pin_code">PIN code</string>
    <string name="flat_no_building_company">Flat no.,Building,Company</string>
    <string name="area_street_colony">Area, Street, Colony</string>
    <string name="landmark">Landmark</string>
    <string name="town_city">Town/City</string>
    <string name="customer_details">Customer details</string>
    <string name="your_order">Your order</string>
    <string name="add_address">Add address</string>
    <string name="category">Category :</string>
    <string name="item">Item :</string>
    <string name="quantity">Quantity :</string>
    <string name="total">Total :</string>
    <string name="place_order">Place Order</string>
    <string name="tons">kg</string>
    <string name="order_panel">Order Panel</string>
    <string name="rs_ton">Rs/kg</string>
    <string name="order">Order</string>
    <string name="customer_mobile_no">Customer mobile no.</string>
    <string name="text">text</string>
    <string name="cancel">Cancel</string>
    <string name="orders">Orders</string>
    <string name="order_no">Order no. :</string>
    <string name="orderno">Orderno</string>
    <string name="name">Name :</string>
    <string name="customer_address">Customer Address</string>
    <string name="order_information">Order information</string>
    <string name="fishery_society_address">Fishery Society address</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>