<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cfreshfishes"
            android:icon="@drawable/fresfishes"
            android:title="@string/fresh_fishes" />
        <item
            android:id="@+id/coil"
            android:icon="@drawable/oil"
            android:title="@string/oil" />
        <item
            android:id="@+id/cnet"
            android:icon="@drawable/net"
            android:title="@string/engine_spare_parts" />

        <item
            android:id="@+id/cfishfarming"
            android:icon="@drawable/fishfarm"
            android:title="@string/fish_farming_seeds"
            />

        <item
            android:id="@+id/cicefac"
            android:icon="@drawable/fac"
            android:title="@string/ice_factory"
            />
    </group>
    <item android:title="@string/details">
        <menu>
            <item
                android:id="@+id/cContact"
                android:icon="@drawable/contact"
                android:title="@string/contact"
                />

        </menu>

    </item>
</menu>