<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_update"
        android:background="#0B89C3"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="5dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/office_no"
            android:inputType="text"
            android:id="@+id/eofficeno">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/office_name"
            android:inputType="text"
            android:id="@+id/eofficename">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_name"
            android:inputType="text"
            android:id="@+id/estreetname">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_village_name"
            android:inputType="text"
            android:id="@+id/ecityname">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taluka"
            android:inputType="text"
            android:id="@+id/etaluka">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/district"
            android:inputType="text"
            android:id="@+id/edistrict">
        </EditText>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/updateAdd">

        </Button>
    </LinearLayout>




</LinearLayout>