<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.e_fisheryapplication.ui.home.HomeFragment"
        android:label="@string/fresh_fishes"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.e_fisheryapplication.ui.gallery.GalleryFragment"
        android:label="@string/oil"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.e_fisheryapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/engine_spare_parts"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fishfarming"
        android:name="com.example.e_fisheryapplication.Fragments.fishfarming"
        android:label="@string/fish_farming_seeds"
        tools:layout="@layout/fragment_fishfarming" />
    <fragment
        android:id="@+id/icefac"
        android:name="com.example.e_fisheryapplication.Fragments.icefactory"
        android:label="@string/ice_factory"
        tools:layout="@layout/fragment_icefactory" />
    <fragment
        android:id="@+id/nContact"
        android:name="com.example.e_fisheryapplication.Fragments.Contact"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/orderIntake"
        android:name="com.example.e_fisheryapplication.Fragments.OrderIntake"
        android:label="Orders"
        tools:layout="@layout/fragment_order_intake" />

</navigation>