<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_panel"
        android:background="#0B89C3"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="5dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_fishery_business"
            android:textSize="25sp"
            android:id="@+id/productname"
            android:textStyle="bold">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availability"
                android:textSize="22sp">

            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:inputType="number"
                android:hint="@string/in_tons"
                android:id="@+id/upavail"
                android:importantForAutofill="no">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tons"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                android:id="@+id/unitavail">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="22sp"
                >

            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:inputType="number"
                android:hint="@string/per_ton"
                android:id="@+id/upprice"
                android:importantForAutofill="no">

            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_ton"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                android:id="@+id/unitprice">

            </TextView>


        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/uButon">

        </Button>


    </LinearLayout>

</LinearLayout>