<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cimageV"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/todo">

        </ImageView>

        <TextView
            android:id="@+id/cHOMETV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_fishery_business"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availability"
                android:textSize="20sp">

            </TextView>
            <TextView
                android:id="@+id/cAVAIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_tons"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tons"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:id="@+id/aunit">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20sp"
                >

            </TextView>

            <TextView
                android:id="@+id/cPRICE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_rs"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                >


            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_ton"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:id="@+id/punit"
                >

            </TextView>
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ceditBtn"
            android:src="@drawable/cart"
            android:layout_gravity="right">

        </ImageView>


    </LinearLayout>

</androidx.cardview.widget.CardView>